update to run with node v14: - remove babel to manage js modules - remove swagger-express-mw incompatible with module use - change for a domain driven source organization
